--- a/components-basic-idea/src/App.css
+++ b/components-basic-idea/src/App.css
@@ -1,10 +1,3 @@
-.App {
-  text-align: center;
-  display: flex;
-  height: 100vh;
-  width: 100%;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -14,6 +7,9 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+.setRedColor{
+  background-color: red;
 }
 
 .App-header {
