--- a/workshop-components/client/src/App.css
+++ b/workshop-components/client/src/App.css
@@ -305,3 +305,197 @@ ul {
     justify-content: center;
   }
 }
+.table-wrapper {
+  position: relative;
+  height: calc(100vh - 20rem - 45px);
+  overflow-y: scroll;
+  background: white;
+  overflow: auto;
+  width: 100%;
+}
+.table-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+.table {
+  width: 100%;
+  border-spacing: 0px;
+}
+
+.table thead {
+  position: sticky;
+  width: 100%;
+  top: 0;
+  background: white;
+  z-index: 1;
+}
+.table thead tr {
+  background-color: #2a87a5;
+  color: white;
+}
+
+.table th {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: left;
+  padding: 8px;
+  text-align: center;
+}
+
+.table th:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.table th:hover .icon {
+  opacity: 1;
+}
+
+.table th .icon {
+  margin-left: 10px;
+  opacity: 0;
+}
+
+.table th .active-icon {
+  opacity: 1;
+}
+
+.table tr th,
+.table tr td {
+  width: 14.28%;
+  border-right: 1px solid white;
+}
+.table tr th:first-of-type,
+.table tr td:first-of-type {
+  border-left: 1px solid white;
+}
+
+.table tbody tr {
+  margin: 0px 5px;
+  height: 64px;
+}
+
+.table tbody td {
+  line-height: 1.5rem;
+  text-align: center;
+  vertical-align: middle;
+  font-weight: 300;
+  padding: 5px;
+  height: 64px;
+  border-bottom: 1px solid white;
+}
+
+.table td.center {
+  text-align: center;
+}
+
+.table tbody {
+  position: relative;
+}
+
+.table tbody tr {
+  background: rgba(199, 198, 198, 0.3);
+  color: black;
+}
+
+.table tbody tr:hover {
+  background: rgba(142, 140, 140, 0.8);
+  color: white;
+}
+
+.table tr.loading {
+  background-color: transparent !important;
+}
+
+.loading-shade {
+  position: absolute;
+  top: 40px;
+  left: 0;
+  bottom: 0px;
+  right: 0;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.no-content {
+  text-align: center;
+}
+
+.error {
+  text-align: center;
+  color: #943232;
+}
+
+.no-content .icon,
+.error .icon {
+  font-size: 5rem;
+  color: #943232;
+}
+
+@media (max-width: 930px) {
+  .table-wrapper {
+    height: calc(100vh - 18rem - 30px);
+  }
+  .table {
+    width: 930px;
+  }
+  .table-wrapper::-webkit-scrollbar {
+    height: 10px;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+  .table-wrapper::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    background: #999;
+  }
+  .table td,
+  .table th {
+    text-align: left;
+  }
+}
+.image {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50px;
+  padding: 2px;
+  border: 1px solid rgb(147, 145, 145);
+  display: flex;
+  margin: auto;
+}
+.actions {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100% !important;
+  margin: auto;
+}
+
+.actions svg {
+  font-size: 1rem;
+}
+
+.btn {
+  padding: 5px;
+  color: white;
+  opacity: 0.7;
+  width: 30px;
+  height: 30px;
+  border-radius: 20%;
+}
+.btn svg {
+  margin: 0;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.delete-btn {
+  background-color: #d9534f;
+}
+
+.edit-btn {
+  background-color: #5cb85c;
+}
