--- a/workshop-components/client/src/App.css
+++ b/workshop-components/client/src/App.css
@@ -499,3 +499,156 @@ ul {
 .edit-btn {
   background-color: #5cb85c;
 }
+.detail-container {
+  width: 100%;
+  height: 45vh;
+}
+
+.headers {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding: 5px 0px;
+  border-bottom: 1px solid #ccc;
+}
+
+.headers h2 {
+  margin-bottom: 0px;
+}
+
+.content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-top: 20px;
+}
+
+.image-container {
+  margin-right: 20px;
+}
+
+.image-container img {
+  border-radius: 50%;
+  width: 210px;
+  height: 210px;
+  object-fit: cover;
+  flex: 4;
+}
+
+.user-details {
+  flex: 8;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 0px !important;
+}
+.user-details p {
+  margin-bottom: 10px;
+}
+.user-details p:last-of-type {
+  margin-bottom: 0px;
+}
+
+@media (min-width: 681px) and (max-width: 1000px) {
+  .detail-container {
+    height: 68vh;
+  }
+  .content {
+    flex-direction: column;
+    align-items: center;
+  }
+  .image-container {
+    margin-right: 0px;
+    margin-bottom: 20px;
+  }
+  .image-container img {
+    width: 140px;
+    height: 140px;
+  }
+}
+
+@media (max-width: 680px) {
+  .detail-container {
+    min-width: 66vw;
+    min-height: 75vh;
+    width: 100%;
+    height: auto;
+  }
+  .content {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 0px;
+  }
+  .image-container {
+    margin-right: 0px;
+    display: flex;
+    justify-content: center;
+    margin: 10px 0px;
+  }
+  .image-container img {
+    width: 120px;
+    height: 120px;
+  }
+  .user-details {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 600px) {
+  .detail-container {
+    min-width: 63vw;
+    min-height: 70vh;
+    width: 100%;
+    height: auto;
+  }
+  .user-details {
+    align-items: stretch;
+  }
+}
+
+@media (max-width: 400px) {
+  .detail-container {
+    min-width: 63vw;
+  }
+  .user-details > p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.modal {
+  position: fixed;
+  left: 15%;
+  width: 60%;
+  max-height: 90vh;
+  overflow: auto;
+  border-radius: 5px;
+  top: 15vh;
+  background-color: white;
+  padding: 1rem;
+  box-shadow: 0 12px 8px rgba(0, 0, 0, 0.25);
+  z-index: 30;
+  animation: slide-down 300ms ease-out;
+}
+.btn.close {
+  background-color: #f7f7f7;
+  border-radius: 50%;
+  padding: 5px 10px;
+  height: auto;
+}
+.overlay {
+  z-index: 20;
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 20;
+  background-color: rgba(0, 0, 0, 0.75);
+}
